--- a/src/client/app.css
+++ b/src/client/app.css
@@ -1,9 +1,13 @@
 h1 {
   color: green;
+  text-align: center;
+}
+
+h2 {
+  text-align: center;
 }
 
 body {
-  text-align: center;
   margin: auto;
 }
 
